src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__confirm_sync_progress_prompt.snap
---
source: src/ui/reader/snapshot_tests.rs
assertion_line: 407
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"                            [[Image: First Edition]]                            "
"                                                                                "
"                                       ***                                      "
"                                                                                "
"                                                                                "
"             ┌KOReader Sync──────────────────────────────────────┐              "
"             │                                                   │              "
"             │  KOReader (kobo) reports a reading position of    │              "
"             │42.0%.                                             │              "
"             │                                                   │              "
"             │  Jump to that position? (y/N)                     │              "
"             │                                                   │              "
"             └───────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
