src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__help_window_filtered.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"                            [[Image: First Edition]]                            "
"                                                                                "
"                                       ***                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                       ┌Help (?)────────────────────────┐                       "
"                       │ Windows & Tools:               │                       "
"                       │   B                 Bookmarks  │                       "
"                       └ /bookmark█ ────────────────────┘                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
