src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__image_view_window.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"┌ 9781449328030_lrg.jpg ───────────────────────────────────────────────────────┐"
"│                       ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀                        │"
"│                                ▄▄▄▄▄▄▄▄▄▄▄▄▄ ▀▄▄▄▀▀▄▀▀▀                      │"
"│                                      ▀▀▀▀▄▀▀▀▄▄▄▄▄▄▀ ▀▀                      │"
"│                                      ▄▄▄▄▀▀▀▀▀▄   ▄▄▄▀▀                      │"
"│                                         ▀▀▄▀▄▄      ▄▄▄                      │"
"│                            ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄▀▀▄▄                               │"
"│                          ▀▀▀▄▀▀▀▀▄▄▄▄▄▄▄▄▀▄▄▄                                │"
"│                          ▀▀▄▀▀▀▀▀▀▀▀▀▀▀▀▀▄▄▄▄                                │"
"│                          ▄▄▄▀▀▄▄▀▀ ▀▄▀▀▄▄▄                                   │"
"│                           ▀▀▀▄▄▄▄▄▄▄▄▄▄▄                                     │"
"│                           ▀▄▄▄▀▀      ▀▄                                     │"
"│                       ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                        │"
"│                          ▄▄▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▀▄▄▄▄▄▄▄▄▄                         │"
"│                         ▄▀▀▄▄▄▀▄▀▀▄▀▀▀▄▀▀▄▀▀▀▀▀▄▄▀▀▀                         │"
"│                        ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                         │"
"│                        ▀▀▄▀▀▄▀▄▄▄▀▀▀▄▀▄▄ ▀▀▄▄                                │"
"│                         ▄▀▀▄▀▀▀▀▄▄▄▀▄▀▀▄ ▀▀▀▄                                │"
"│                        ▄▀▀▀▀▀▀▄▄▀▀▀▄▀▀▀▀▄▄▄▀▄▄▄▄▄▄▄▄▄                        │"
"│                        ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                        │"
"│                                                                              │"
"│                        ▀▀▀▀▀▀▄▄              ▀▀▀▀▀▀▀▀                        │"
"│                           ▄▄▄                         ▄                      │"
"└ Esc/q/Enter close · o external viewer ───────────────────────────────────────┘"
