src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__inline_image_rendering.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"                            ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀                           "
"                                   ▄▄▄▄▄▄▄▀▀▀▀▀▄▄▀▀ ▀                           "
"                                       ▄▄▄▀▀▀▀▀▄▄▄▄▄▄                           "
"                                         ▀▀▄▄▄▄    ▄▄                           "
"                               ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▄                                  "
"                              ▀▀▀▀▄▄▀▀▀▀▄▄▄▄▄▄                                  "
"                              ▄▄▀▀▄▀▀▀▀▀▀▄▄▄                                    "
"                               ▀▄▄▄▄▄▄▄▄▄▄                                      "
"                            ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀                            "
"                            ▀▀▄▄▀▄▄▄▄▄▄▄▀▀▄▄▄▄▄▄▄▄▀▀                            "
"                             ▄▀▀▄▄▀▄▀▀▀▀▄▀▄▄▀▀▀▀▄▀▀                             "
"                             ▄▄▄▄▄▄▄▄▄▄▄▄▀▀▄▄▀▀▀▀▀▀                             "
"                             ▀▀▀▀▄▀▀▄▀▀▀▀▄ ▀▀▄                                  "
"                            ▄▄▀▄▀▀▄▀▄▄▄▀▀▄▄▄▄▄▄▄▄▄▄▄                            "
"                            ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                            "
"                            ▀▀▀▀▀▀▀          ▀▀▀▀▀▀▀                            "
"                            ▄▄▄▄▄▄           ▄▄▄▄▄▄▄                            "
"                                                                                "
"                                       ***                                      "
"                                                                                "
"                                                                                "
