src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__library_cover_panel.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"             ┌Library — by recent────────────────────────────────┐              "
"             │HINT: O OPDS  Enter open  c details  f format  d de│              "
"             │                                                   │              "
"             │  0% [time]: Access│ Details               │              "
"             │                           │       ▄▄▄▄▀▄▄▀        │              "
"             │                           │       ▀▀▀▀▄▄▄▄        │              "
"             │                           │       ▀▀▀▀▀▀▀▀        │              "
"             │                           │       ▄▀▄▄▀▀▀         │              "
"             │                           │       ▄▄▄▄▄▄▄▄        │              "
"             │                           │                       │              "
"             │                           │Accessible EPUB 3      │              "
"             │                           │Author: Matt Garrish   │              "
"             │                           │Formats: EPUB          │              "
"             │                           │                       │              "
"             │                           │                       │              "
"             │                           │                       │              "
"             │                           │                       │              "
"             └───────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
